fix(plugins/plugin-client-common): input probably needs to word-wrap while in minisplits
Fixes #5696

--- a/plugins/plugin-client-common/web/scss/components/Terminal/MiniSplit.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/MiniSplit.scss
@@ -48,11 +48,6 @@
   .repl-input {
     flex-wrap: nowrap;
   }
-  .repl-input-element {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
   .repl-block:not(.repl-active) .repl-input-element-wrapper {
     background-color: $input-bg-minisplit;
   }
